# DocQFastAPI

./: .env  data.py  data.txt  doc_reader_chatbot.py  genai.py  pyproject.toml  response.py
src/: .gitignore  FastAPIdocQ.py  sni.cloudflaressl.crt
src/data/: chroma.sqlite3
