[tool.poetry]
name = "openai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.31.0"
pandas = "^2.1.0"
tiktoken = "^0.5.0"
scipy = "^1.11.2"
fastapi = ">=0.95.2,<0.100.0"
chromadb = "^0.4.12"
docx2txt = "^0.8"
langchain = "^0.0.325"
pypdf = "^3.16.4"
pip-system-certs = "^4.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
